# acadrepy

./: .gitignore  README.md  pyproject.toml
src/acadrepy/: __init__.py  acadrepy.py
