[project]
name = "acadrepy"
version = "0.1.0"
description = "Acadre API wrapper for Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "requests-ntlm>=1.3.0",
    "requests>=2.31.0",
]

[tool.uv]
dev-dependencies = ["ipykernel>=6.29.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
